# ADRift

./: .dockerignore  .gitignore  Brewfile  Makefile  README.md  pyproject.toml
.github/workflows/: actions-entrypoint.yml  dry-build-and-deploy.yml  dry-draft-version.yml  dry-versions.yml
adrift/: __init__.py  app.py  config.yml  postgres.env
adrift/.streamlit/: config.toml  pages.toml
adrift/components/: keyup.py  tables.py
adrift/config/: app.py  data.py
adrift/pages/: adrs.py  configuration.py  home.py
adrift/src/: database.py  functions.py
docker/: Dockerfile  entrypoint.sh
docs/: index.md
manifests/argocd/: install.sh  namespace.yaml  remove.sh
manifests/argocd/base/: config.yaml  deployment-patch.yaml.template  deployment.yaml  kustomization.yaml  secret.yaml  secret.yaml.template  service.yaml
manifests/argocd/overlays/: adrift-application.yaml  adrift-ingressroute.yaml  adrs-ingressroute.yaml  application-patch.yaml.template  kustomization.yaml
manifests/argocd/postgres/: configmap.example  kustomization.yaml  postgres-config.yaml  postgres-deployment.yaml  postgres-pv.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml  postgres-statefulset.yaml
manifests/argocd/prereqs/: kustomization.yaml  postgres-config.yaml  postgres-pv.yaml  postgres-pvc.yaml  postgres-secret.yaml
scripts/: api_key_generator.sh  install.sh  postgres-init.sh  python.txt
scripts/encryption/: create_keys.sh  delete_keys.sh  export_keys.sh  get_fingerprint.sh  import_gpg_key.sh  key_check.sh  post_key_setup.py
(+3 files in other folders)
